k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kam-admin
  labels:
    app.kubernetes.io/name: kam-admin
