k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kam-admin-server
  namespace: kam-admin
  labels:
    app: kam-admin-server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: kam-admin-server
